# WildLifeManagementGL

./: .gitignore  CMakeLists.txt  build.cmd  build.sh
Engine/: CMakeLists.txt
Engine/Assets/: AssetManager.h
Engine/Core/: Application.cpp  Application.h  Layer.h  Time.h
Engine/ECS/: Components.h  Entity.h
Engine/Platform/: Window.cpp  Window.h
Engine/Renderer/: Mesh.cpp  Mesh.h  ModelLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Engine/Scene/: Component.h  Scene.cpp  Scene.h  SceneObject.h
Engine/Scene/Components/: RenderComponent.h  TransformComponent.h
Engine/Scripting/: Script.h
Game/: CMakeLists.txt
Game/src/: GameApp.cpp  GameApp.h  GameLayer.cpp  GameLayer.h  main.cpp
Game/src/shaders/: fragment.glsl  vertex.glsl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: emitf.glsl  fragment.glsl
src/: CircleMesh.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
src/Base/: IProperty.h  Renderer.h  SceneObject.h  WorldTransform.h
